--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
         let button = document.querySelector('button');
         button.onclick = () => {
-            size = +prompt('Enter the number of squares per side:');
+            size = +prompt('Enter the number of squares per side: (1-100)');
+            if(size < 1 || size > 100 || isNaN(size) === true) alert('Enter a proper value from 1 to 100')
+            else {
             divs.forEach((div) => div.remove());
             makeGrid(size);
-        }
+        }};
         
     </script>
 </body>
